# aliengo_delivery

./: README.md
aliengo_base/: CMakeLists.txt  package.xml
aliengo_base/include/: quadruped_awareness_controller.h  quadruped_controller.h  quadruped_foot_controller.h
aliengo_base/include/libchamp/include/quadruped_base/: quadruped_components.h  quadruped_leg.h
aliengo_base/src/: quadruped_awareness_controller.cpp  quadruped_awareness_controller_node.cpp  quadruped_controller.cpp  quadruped_controller_node.cpp  quadruped_foot_controller.cpp  quadruped_foot_controller_node.cpp
aliengo_config/: config.json  package.xml
aliengo_config/config/ekf/: ekf.yaml
aliengo_config/config/elevation/: elevation_param.yaml  filter_param.yaml  probabilistic_mapping_param.yaml
aliengo_config/config/elevation/grid_visualization/: elevation_viz.yaml  probabilistic_viz.yaml
aliengo_config/config/gait/: gait.yaml  gait_obstacle.yaml
aliengo_config/config/links/: links.yaml
aliengo_config/config/traversability/: general_traversability_param.yaml  roughness_param.yaml  slope_param.yaml  step_param.yaml
aliengo_config/config/traversability/grid_visualization/: estimation_viz.yaml  step_viz.yaml
aliengo_config/include/: gait_config.h  quadruped_description.h
aliengo_config/launch/: bringup.launch  foot_awareness.launch  foot_planner.launch  velocity_smoother.launch
aliengo_delivery/: CMakeLists.txt  package.xml
aliengo_delivery/include/aliengo_delivery/: belt_control.hpp
aliengo_delivery/launch/: .roughness_extract.launch  .slope_extract.launch  belt_control.launch  elevation_demo.launch  octomap.launch  real_demo.launch  traversability_demo.launch
aliengo_delivery/script/: .aliengo_calibration.py  .aliengo_docking.py  aliengo_delivery.py  aliengo_docking.py  aliengo_docking_out.py  aliengo_move.py  aliengo_send_defined.py  aliengo_send_goal.py  aliengo_spawn.py  smach_example.py
aliengo_delivery/src/: belt_control_node.cpp
aliengo_delivery/src/lib_code/: belt_control.cpp
aliengo_description/: aliengo_board.blend  aliengo_board.blend1
aliengo_description/launch/: aliengo_rviz.launch  check_joint.rviz
aliengo_description/xacro/: aliengo.urdf  aliengo_deck.stl  leg.xacro  robot.xacro
aliengo_gazebo/: CMakeLists.txt  package.xml
aliengo_gazebo/launch/: gazebo.xacro  normal_aliengo.launch  rviz.launch
aliengo_gazebo/launch/models/stairs_v3/meshes/: stairs_v3.dae
aliengo_gazebo/launch/world/: aliengo_belt.urdf  elevated_world.world  elevated_world_v2.world  moving_ground.urdf  my_box.urdf
aliengo_gazebo/models/stairs_v3/: model.config  model.sdf
aliengo_gazebo/rviz/: urdf_viewer.rviz
aliengo_gazebo/script/: aliengo_keyboard_teleop.py  sim_odometry_converter.py
aliengo_gazebo/src/: body.cpp
aliengo_gazebo/world/: aliengo_belt.urdf  belt.stl  elevated_world_v2.world  moving_ground.urdf  slope_ramp.world
aliengo_msgs/: CMakeLists.txt  package.xml
aliengo_msgs/msg/: Foot.msg  Foots.msg  GaitInfo.msg
aliengo_navigation/: CMakeLists.txt  package.xml
aliengo_navigation/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml
aliengo_navigation/launch/: gmapping.launch  move_base.launch
aliengo_state_mach/: CMakeLists.txt  package.xml
aliengo_state_mach/config/: smach_config.yaml
aliengo_state_mach/launch/: rover_smach.launch
aliengo_state_mach/msg/: RoverActionMsg.msg  RoverStateMsg.msg
aliengo_state_mach/script/: dull_demo.py  state_machine.py  status_handler.py
executive_smach_visualization/: .travis.yml  README.md
executive_smach_visualization/executive_smach_visualization/: CHANGELOG.rst  package.xml
executive_smach_visualization/smach_viewer/: CHANGELOG.rst  package.xml
executive_smach_visualization/smach_viewer/scripts/: smach_viewer.py
executive_smach_visualization/smach_viewer/src/smach_viewer/xdot/: wxxdot.py  xdot.py  xdot_qt.py
navigation/costmap_2d/: CMakeLists.txt  costmap_plugins.xml
navigation/costmap_2d/include/costmap_2d/: grid_layer.h  obstacle_layer.h  obstacle_local_layer.h  occupancy_grid_subscriber.h
navigation/costmap_2d/plugins/: obstacle_layer.cpp  obstacle_local_layer.cpp
navigation/costmap_2d/src/: costmap_2d_ros.cpp  observation_buffer.cpp  occupancy_grid_subscriber.cpp
navigation/grid_map/grid_map_demos/: CMakeLists.txt
navigation/grid_map/grid_map_demos/config/visualization/: raw.yaml
navigation/grid_map/grid_map_demos/launch/: simple_demo.launch  slope_visualization.launch  visualizatio1n.launch
navigation/grid_map/grid_map_demos/src/: elevation_grid.cpp  grid_map_demo.cpp  simple_demo_node.cpp  slope_demo.cpp
navigation/navfn/src/: navfn_ros.cpp
yocs_velocity_smoother/: README.md
yocs_velocity_smoother/src/: velocity_smoother_nodelet.cpp
