<?xml version="1.0"?>
<package>
  <name>aliengo_delivery</name>
  <version>0.0.0</version>
  <description>Aliengo Delivery package</description>

  <maintainer email="g.haddeler@gmail.com">Garen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aliengo_state_mach</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
<build_depend>nav_msgs</build_depend>
<build_depend>gazebo_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>message_generation</build_depend>
   <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>aliengo_state_mach</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
