<?xml version="1.0"?>
<package format="2">
  <name>aliengo_navigation</name>
  <version>0.0.0</version>
  <description>The aliengo_navigation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="asoro-2@todo.todo">asoro-2</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/simple_layers</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eband_local_planner</depend>
  <depend>roscpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
   <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>

</package>
